Replace deprecated newInstance calls
Part of #435 and Bugzilla Id: 62972


git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1847960 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 5470c3831b280e9d195dcb694747a396adb6ba74